Add initial database logic
Using Sequelize to manage DB access.

Fix a bug with cookie authentication
